--- a/ambigram-generator-guide.html
+++ b/ambigram-generator-guide.html
@@ -217,7 +217,7 @@
             </div>
 
             <div class="flex items-center gap-4">
-                <a href="/#generator"
+                <a href="/generator"
                     class="hidden md:block bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full transition-all hover:shadow-lg hover:shadow-primary/20">
                     Generate Now
                 </a>
@@ -239,7 +239,7 @@
                 <a href="free-generator" class="py-2 hover:text-primary transition-colors">Free Generator</a>
                 <a href="faq" class="py-2 hover:text-primary transition-colors">FAQ</a>
                 <a href="ambigram-generator-guide" class="py-2 text-primary font-medium">Guide</a>
-                <a href="/#generator"
+                <a href="/generator"
                     class="bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full text-center transition-all">
                     Generate Now
                 </a>
