--- a/generator.html
+++ b/generator.html
@@ -130,7 +130,7 @@
 
         <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
         <!-- Check this href as well, if it's meant to be a scroll-to link -->
-        <a href="#generator"
+        <a href="/generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
         <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
         <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
@@ -204,7 +204,7 @@
           reflective, and <strong>two-name ambigrams</strong>. Get your
           high-resolution PNG or SVG for free.
         </p>
-        <a href="#generator-tool"
+        <a href="/3d-generator"
           class="bg-secondary text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center gap-2">
           <i class="fa fa-magic"></i> Start Designing Now
         </a>
@@ -396,7 +396,7 @@
         <h2 class="text-3xl font-display font-bold text-dark mb-4">
           Ready to Design Your 2D Masterpiece?
         </h2>
-        <a href="#generator-tool"
+        <a href="/3d-generator"
           class="bg-primary text-white px-10 py-4 rounded-full text-xl font-semibold hover:bg-blue-600 hover:-translate-y-1 transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center gap-3">
           <i class="fa fa-pencil"></i> Start Designing Now
         </a>
