--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -136,7 +136,7 @@
             <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
             <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
-                <a href="#generator"
+                <a href="/generator"
                     class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start
                     Creating</a>
             </div>
