--- a/tutorial/multi-word-guide.html
+++ b/tutorial/multi-word-guide.html
@@ -147,7 +147,7 @@
             <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
             <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
-                <a href="#generator"
+                <a href="/generator"
                     class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start
                     Creating</a>
             </div>
@@ -304,7 +304,7 @@ const wordB = "HATE";
                         Ready to test your chosen phrases? The process starts now:
                     </p>
                     <div class="text-center my-10">
-                        <a href="/#generator2d"
+                        <a href="/generator2d"
                             class="inline-block bg-secondary text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-xl">Use
                             the Two Word Ambigram Generator Instantly!</a>
                     </div>
