--- a/3d-generator.html
+++ b/3d-generator.html
@@ -101,7 +101,7 @@
 
                 <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
                 <!-- Check this href as well, if it's meant to be a scroll-to link -->
-                <a href="#generator"
+                <a href="/generator"
                     class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start
                     Creating</a>
                 <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
@@ -142,7 +142,7 @@
             <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
             <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
-                <a href="#generator"
+                <a href="/generator"
                     class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start
                     Creating</a>
             </div>
@@ -172,7 +172,7 @@
                 <p class="text-xl text-gray-300 max-w-3xl mx-auto mb-8">Create stunning, interactive 3D ambigrams for 3D
                     printing. Download print-ready <strong>STL files</strong> or animated <strong>GIFs</strong>
                     instantly and for free.</p>
-                <a href="#generator-tool"
+                <a href="/3d-generator"
                     class="inline-block bg-primary text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-600 hover:-translate-y-1 transition-all duration-300 shadow-lg shadow-blue-500/20">
                     <i class="fa fa-magic mr-2"></i> Start Generating Now
                 </a>
@@ -364,7 +364,7 @@
                 <h2 class="text-3xl font-display font-bold text-dark mb-4">Ready to Create Your Own 3D Masterpiece?</h2>
                 <p class="text-lg text-gray-600 max-w-2xl mx-auto mb-8">Unleash your creativity and design a unique 3D
                     ambigram in seconds. It’s free, fast, and fun.</p>
-                <a href="#generator-tool"
+                <a href="/3d-generator"
                     class="bg-secondary text-white px-10 py-4 rounded-full text-xl font-semibold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center gap-3">
                     <i class="fa fa-magic"></i> Generate for Free
                 </a>
