--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 
         <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
         <!-- Check this href as well, if it's meant to be a scroll-to link -->
-        <a href="#generator"
+        <a href="/generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
         <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
         <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
