--- a/privacy.html
+++ b/privacy.html
@@ -68,7 +68,7 @@
         <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an
           Ambigram</a>
         <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
-        <a href="#generator"
+        <a href="/generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
         <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
         <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
