--- a/terms.html
+++ b/terms.html
@@ -343,7 +343,7 @@
             </li>
             <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
             </li>
-            <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
+            <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
           </ul>
         </div>
       </div>
@@ -361,14 +361,6 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-      const mobileMenu = document.getElementById('mobile-menu');
-      if (mobileMenuBtn && mobileMenu) {
-        mobileMenuBtn.addEventListener("click", () => {
-          mobileMenu.classList.toggle("hidden");
-        });
-      }
-
       // Table of Contents Scrollspy
       const sections = document.querySelectorAll('div[id]');
       const navLinks = document.querySelectorAll('#toc-nav a');
