--- a/3d-generator.html
+++ b/3d-generator.html
@@ -439,7 +439,7 @@
                         <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of
                                 Service</a>
                         </li>
-                        <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About
+                        <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About
                                 Us</a></li>
                     </ul>
                 </div>
