--- a/privacy.html
+++ b/privacy.html
@@ -455,7 +455,7 @@
             </li>
             <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
             </li>
-            <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
+            <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About Us</a></li>
           </ul>
         </div>
       </div>
