--- a/tattoo-design.html
+++ b/tattoo-design.html
@@ -343,7 +343,7 @@
                         <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of
                                 Service</a>
                         </li>
-                        <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About
+                        <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About
                                 Us</a></li>
                     </ul>
                 </div>
@@ -361,15 +361,8 @@
 
     </footer>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-            const mobileMenu = document.getElementById('mobile-menu');
-            if (mobileMenuBtn && mobileMenu) {
-                mobileMenuBtn.addEventListener('click', () => { mobileMenu.classList.toggle('hidden'); });
-            }
-        });
-    </script>
+
+
 </body>
 
 </html>
