--- a/tutorial/tattoo-design.html
+++ b/tutorial/tattoo-design.html
@@ -393,7 +393,7 @@ const TattooSettings = {
                         <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of
                                 Service</a>
                         </li>
-                        <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About
+                        <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About
                                 Us</a></li>
                     </ul>
                 </div>
