--- a/tutorial/two-name-ambigram.html
+++ b/tutorial/two-name-ambigram.html
@@ -343,7 +343,7 @@ function solveDualSymmetry(wordA, wordB) {
                         Ready to test your two names? Skip the theory and go straight to application:
                     </p>
                     <div class="text-center my-10">
-                        <a href="/generator2d"
+                        <a href="/"
                             class="inline-block bg-secondary text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-xl">Generate
                             Your Two-Name Ambigram Now!</a>
                     </div>
