--- a/tutorial/multi-word-guide.html
+++ b/tutorial/multi-word-guide.html
@@ -304,7 +304,7 @@ const wordB = "HATE";
                         Ready to test your chosen phrases? The process starts now:
                     </p>
                     <div class="text-center my-10">
-                        <a href="/generator2d"
+                        <a href="/"
                             class="inline-block bg-secondary text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-xl">Use
                             the Two Word Ambigram Generator Instantly!</a>
                     </div>
