--- a/tutorial/tattoo-design.html
+++ b/tutorial/tattoo-design.html
@@ -318,7 +318,7 @@ const TattooSettings = {
                         Stop sketching and start creating:
                     </p>
                     <div class="text-center my-10">
-                        <a href="/generator2d"
+                        <a href="/"
                             class="inline-block bg-secondary text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-xl">Start
                             Designing Your Tattoo Ambigram Now!</a>
                     </div>
