--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,6 @@
         </div>
       </div>
     </section>
-
     <!-- FAQ Section -->
     <section id="faq" class="py-20 bg-white">
       <div class="container mx-auto px-4 max-w-4xl">
@@ -1123,38 +1122,160 @@
           <h2 class="text-3xl font-display font-bold text-dark">
             Frequently Asked Questions
           </h2>
+          <p class="mt-4 text-gray-600">
+            Everything you need to know about our ambigram generator
+          </p>
         </div>
         <div class="space-y-4">
+          <!-- FAQ Item 1 -->
           <div class="bg-white p-2 rounded-lg shadow-sm border">
             <button
               class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
-              Is this ambigram generator really free?<i class="fa fa-chevron-down transition-transform"></i>
+              What is an ambigram?<i class="fa fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer hidden p-4 border-t text-gray-600">
-              Yes, absolutely! All features are 100% free to use. There are no
-              hidden costs, subscriptions, or watermarks on your downloads.
+              <p>
+                An ambigram is a typographical design that may be read as one or
+                more words when viewed from different orientations, typically
+                rotated 180 degrees. Some ambigrams can also be read as
+                different words depending on the viewing direction, creating an
+                intriguing visual effect perfect for tattoos, logos, and
+                artistic expressions.
+              </p>
             </div>
           </div>
+          <!-- FAQ Item 2 -->
           <div class="bg-white p-2 rounded-lg shadow-sm border">
             <button
               class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
-              What file formats can I download?<i class="fa fa-chevron-down transition-transform"></i>
+              Is your ambigram generator free to use?<i class="fa fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer hidden p-4 border-t text-gray-600">
-              The 3D generator provides a <strong>.STL file</strong> for 3D
-              printing and an animated <strong>.GIF file</strong> for sharing.
-              Our 2D generator provides high-resolution PNG and SVG files.
+              <p>
+                Yes, our ambigram generator is completely free to use. You can
+                create, customize, and download as many ambigrams as you want
+                without any hidden costs or subscription fees. We believe in
+
+                making creative tools accessible to everyone.
+              </p>
             </div>
           </div>
+          <!-- FAQ Item 3 -->
           <div class="bg-white p-2 rounded-lg shadow-sm border">
             <button
               class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
-              Can I create a two-name ambigram?<i class="fa fa-chevron-down transition-transform"></i>
+              Can I use the generated ambigrams commercially?<i class="fa fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer hidden p-4 border-t text-gray-600">
-              Yes! Our generator excels at creating two-name ambigrams. Simply
-              enter a different word in each of the text input fields to see
-              them merge into one design.
+              <p>
+                Yes, you can use the ambigrams created with our generator for
+                both personal and commercial purposes, including but not limited
+                to tattoos, logos, merchandise, and marketing materials.
+                However, you may not claim the generator itself or its
+                underlying technology as your own. For full details, please
+                review our
+                <a href="terms.html" class="text-primary hover:underline">Terms of Service</a>.
+              </p>
+            </div>
+          </div>
+          <!-- FAQ Item 4 -->
+          <div class="bg-white p-2 rounded-lg shadow-sm border">
+            <button
+              class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
+              What file formats can I download my ambigram in?<i class="fa fa-chevron-down transition-transform"></i>
+            </button>
+            <div class="faq-answer hidden p-4 border-t text-gray-600">
+              <p>
+                Our generator allows you to download your ambigrams in
+                high-resolution PNG format, which is ideal for most uses
+                including digital displays and printing. PNG format preserves
+                transparency and provides excellent image quality. For
+                professional design work, you can also capture SVG versions for
+                scalable vector graphics that maintain quality at any size.
+              </p>
+            </div>
+          </div>
+          <!-- FAQ Item 5 -->
+          <div class="bg-white p-2 rounded-lg shadow-sm border">
+            <button
+              class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
+              Why doesn't my ambigram look good when rotated?<i class="fa fa-chevron-down transition-transform"></i>
+            </button>
+            <div class="faq-answer hidden p-4 border-t text-gray-600">
+              <p>
+                Creating effective ambigrams depends on the letters used and
+                their compatibility when rotated. Certain letter combinations
+                work better than others. If your ambigram doesn't look good,
+                try:
+              </p>
+              <ul class="list-disc pl-6 mt-2 space-y-1">
+                <li>Using shorter words (3-6 letters work best)</li>
+                <li>
+                  Choosing different fonts - some fonts are better suited for
+                  ambigram creation
+                </li>
+                <li>Experimenting with similar-looking words</li>
+                <li>Using a single word that reads the same when rotated</li>
+              </ul>
+            </div>
+          </div>
+          <!-- FAQ Item 6 -->
+          <div class="bg-white p-2 rounded-lg shadow-sm border">
+            <button
+              class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
+              How can I create the best possible ambigram?<i class="fa fa-chevron-down transition-transform"></i>
+            </button>
+            <div class="faq-answer hidden p-4 border-t text-gray-600">
+              <p>
+                For the best results, follow these tips:
+              </p>
+              <ul class="list-disc pl-6 mt-2 space-y-1">
+                <li>
+                  Choose words with similar letter shapes when rotated (e.g.,
+                  b/q, d/p, m/w)
+                </li>
+                <li>Try one-word ambigrams that read the same when rotated</li>
+                <li>
+                  Experiment with different fonts - some work better than others
+                  for specific words
+                </li>
+                <li>Keep words relatively short (2-8 letters)</li>
+                <li>
+                  Use the color gradient feature to enhance the visual effect
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- FAQ Item 7 -->
+          <div class="bg-white p-2 rounded-lg shadow-sm border">
+            <button
+              class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
+              Do you store the ambigrams I create?<i class="fa fa-chevron-down transition-transform"></i>
+            </button>
+            <div class="faq-answer hidden p-4 border-t text-gray-600">
+              <p>
+                No, we do not store any of the ambigrams you create using our
+                generator. All processing happens locally in your browser, and
+                your creations are not sent to our servers or stored anywhere.
+                This ensures your privacy and means you have full control over
+                your designs.
+              </p>
+            </div>
+          </div>
+          <!-- FAQ Item 8 -->
+          <div class="bg-white p-2 rounded-lg shadow-sm border">
+            <button
+              class="faq-toggle w-full text-left p-4 font-semibold text-gray-800 flex justify-between items-center">
+              Can I request new fonts or features?<i class="fa fa-chevron-down transition-transform"></i>
+            </button>
+            <div class="faq-answer hidden p-4 border-t text-gray-600">
+              <p>
+                Absolutely! We're always looking to improve our generator. If
+                you have suggestions for new fonts, features, or improvements,
+                please feel free to contact us through our feedback form. We
+                value user input and frequently update our tool based on
+                community suggestions.
+              </p>
             </div>
           </div>
         </div>
