--- a/free-generator.html
+++ b/free-generator.html
@@ -151,6 +151,12 @@
               Guide</a>
             <a href="/tutorial/two-name-ambigram" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
               Ambigram</a>
+            <a href="/guide/2d-vs-3d-design" class="block px-4 py-2 text-dark hover:bg-gray-100">2D vs 3D Design</a>
+
+            <a href="/guide/flipscript-principles" class="block px-4 py-2 text-dark hover:bg-gray-100">Flipscript
+              Principles</a>
+            <a href="/guide/ambigram-history-art" class="block px-4 py-2 text-dark hover:bg-gray-100">Ambigram History
+              and Art</a>
           </div>
         </div>
 
@@ -189,6 +195,14 @@
             Guide</a>
           <a href="/tutorial/two-name-ambigram" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
             Ambigram</a>
+          <a href="/guide/2d-vs-3d-design" class="block px-8 py-2 text-dark hover:bg-gray-100">2D vs 3D
+            Design</a>
+
+          <a href="/guide/flipscript-principles" class="block px-8 py-2 text-dark hover:bg-gray-100">Flipscript
+            Principles</a>
+          <a href="/guide/ambigram-history-art" class="block px-8 py-2 text-dark hover:bg-gray-100">Ambigram
+            History
+            and Art</a>
         </div>
       </div>
 
