--- a/privacy.html
+++ b/privacy.html
@@ -88,6 +88,12 @@
               Guide</a>
             <a href="/tutorial/two-name-ambigram" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
               Ambigram</a>
+            <a href="/guide/2d-vs-3d-design" class="block px-4 py-2 text-dark hover:bg-gray-100">2D vs 3D Design</a>
+
+            <a href="/guide/flipscript-principles" class="block px-4 py-2 text-dark hover:bg-gray-100">Flipscript
+              Principles</a>
+            <a href="/guide/ambigram-history-art" class="block px-4 py-2 text-dark hover:bg-gray-100">Ambigram History
+              and Art</a>
           </div>
         </div>
 
@@ -126,6 +132,14 @@
             Guide</a>
           <a href="/tutorial/two-name-ambigram" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
             Ambigram</a>
+          <a href="/guide/2d-vs-3d-design" class="block px-8 py-2 text-dark hover:bg-gray-100">2D vs 3D
+            Design</a>
+
+          <a href="/guide/flipscript-principles" class="block px-8 py-2 text-dark hover:bg-gray-100">Flipscript
+            Principles</a>
+          <a href="/guide/ambigram-history-art" class="block px-8 py-2 text-dark hover:bg-gray-100">Ambigram
+            History
+            and Art</a>
         </div>
       </div>
 
@@ -443,6 +457,12 @@
                 class="text-gray-400 hover:text-white transition-colors text-sm">Tattoo Design Guide</a></li>
             <li><a href="/tutorial/two-name-ambigram.html"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Two-Name Ambigram</a></li>
+            <li><a href="/guide/2d-vs-3d-design" class="text-gray-400 hover:text-white transition-colors text-sm">2D vs
+                3D Design</a></li>
+            <li><a href="/guide/flipscript-principles"
+                class="text-gray-400 hover:text-white transition-colors text-sm">Flipscript Principles</a></li>
+            <li><a href="/guide/ambigram-history-art"
+                class="text-gray-400 hover:text-white transition-colors text-sm">Ambigram History and Art</a></li>
 
           </ul>
         </div>
